--- a/templates/musicapp/song_list.html
+++ b/templates/musicapp/song_list.html
@@ -1,33 +1,51 @@
 {% load static %}
-<!DOCTYPE html>
-<html>
+<!doctype html>
+<html lang="en">
 
 <head>
-    <title>Song List</title>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>Blue Pulse Music</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+    <!-- Css file location -->
+    <link rel="stylesheet" type="text/css" href="{% static 'styles/css/style.css' %}">
+  
+
 </head>
 
 <body>
-    <h1>Song List</h1>
-    <ul>
-        {% for song in songs %}
-        <li>
-            <div class="container align-items-center">
-                <img src="{{ song.song_image.url }}" alt="{{ song.song_title }} Image" width="100" height="100">
-                <div>
-                    <h3>{{ song.song_title }}</h3>
-                    <p>{{ song.artist_name }}</p>
-                    <audio controls>
-                        <source src="{{ song.song_file }}" type="audio/mpeg">
-                        Your browser does not support the audio element.
-                    </audio>
+
+
+    <h1 class="text-center">Song List</h1>
+
+    <div class="container">
+        <div class="row">
+            {% for song in songs %}
+            <div class="col-md-4 mb-4">
+                <div class="card song-card intellectual-grey">
+                    <img src="{{ song.song_image.url }}" class="mx-auto" alt="{{ song.song_title }} Image"
+                        width="200" height="250">
+                    <div class="card-body text-center">
+                        <h4 class="card-title">{{ song.song_title }}</h4>
+                        <h5 class="card-subtitle">{{ song.artist_name }}</h5>
+
+                        <audio controls controlsList="nodownload" class="mt-3">
+                            <source src="{{ song.song_file.url }}" type="audio/mpeg">
+                            Your browser does not support the audio element.
+                        </audio>
+                    </div>
                 </div>
             </div>
-        </li>
-        <h4>Debugging Output</h4>
-        <p>Song File URL: {{ song.song_file.url }}</p>
-        <p>Song Image URL: {{ song.song_image.url }}</p>
-        {% endfor %}
-    </ul>
-</body>
+            {% endfor %}
+        </div>
+    </div>
+
+
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous">
+    </script>
+ 
 
 </html>
