--- a/static/styles/css/style.css
+++ b/static/styles/css/style.css
@@ -3,8 +3,19 @@
 .song-li {
     list-style-type: none;
 }
+.song-head {
+    font-family: Georgia, 'Times New Roman', Times, serif;
+    color: #EAEAEA;
+}
 .song-card {
     color: white;
+    min-height: 400px;
+    font-family: Georgia, 'Times New Roman', Times, serif;
+}
+
+.song-body {
+    background-color:  #8E793E;
+
 }
 
 /* Swatch Colors background colors */
@@ -14,6 +25,7 @@
 
 .light-gold {
     background-color: #AD974F;
+    
 } 
 
 .intellectual-grey {
@@ -27,6 +39,10 @@
 /* Slider for Audio song page */
 audio::-webkit-media-controls-play-button,
 audio::-webkit-media-controls-panel {
-  background-color: #8E793E;
-  color: #a0276e;
+    background-color: #8E793E;
+}
+
+/* Audio */
+audio {
+    display: flex;
 }
