--- a/templates/musicapp/song_list.html
+++ b/templates/musicapp/song_list.html
@@ -10,27 +10,27 @@
         integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <!-- Css file location -->
     <link rel="stylesheet" type="text/css" href="{% static 'styles/css/style.css' %}">
-  
+
 
 </head>
 
-<body>
+<body class="song-body">
 
 
-    <h1 class="text-center">Song List</h1>
+    <h1 class="text-center song-head">Blue Pulse Anthology</h1>
 
     <div class="container">
         <div class="row">
             {% for song in songs %}
-            <div class="col-md-4 mb-4">
+            <div class="col-md-4 mb-4 ">
                 <div class="card song-card intellectual-grey pt-2">
-                    <img src="{{ song.song_image.url }}" class="mx-auto" alt="{{ song.song_title }} Image"
-                        width="200" height="250" >
-                    <div class="card-body text-center">
-                        <h4 class="card-title">{{ song.song_title }}</h4>
-                        <h5 class="card-subtitle">{{ song.artist_name }}</h5>
+                    <img src="{{ song.song_image.url }}" class="mx-auto" alt="{{ song.song_title }} Image" width="200"
+                        height="250">
+                    <div class="card-body flex align-items-center justify-content-center ">
+                        <h4 class="card-title text-center">{{ song.song_title }}</h4>
+                        <h5 class="card-subtitle text-center">{{ song.artist_name }}</h5>
 
-                        <audio controls controlsList="nodownload" class="mt-3">
+                        <audio controls controlsList="nodownload" class="m-3 col-md-10 col-11 align-items-center justify-content-center">
                             <source src="{{ song.song_file.url }}" type="audio/mpeg">
                             Your browser does not support the audio element.
                         </audio>
@@ -46,6 +46,6 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous">
     </script>
- 
+
 
 </html>
