--- a/templates/musicapp/song_list.html
+++ b/templates/musicapp/song_list.html
@@ -1,24 +1,11 @@
+{% extends "base.html" %}
+
+{% block content %}
+
 {% load static %}
-<!doctype html>
-<html lang="en">
 
-<head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Blue Pulse Music</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
-    <!-- Css file location -->
-    <link rel="stylesheet" type="text/css" href="{% static 'styles/css/style.css' %}">
-
-
-</head>
-
-<body class="song-body">
-
-
+<main class="song-main">
     <h1 class="text-center song-head">Blue Pulse Anthology</h1>
-
     <div class="container">
         <div class="row">
             {% for song in songs %}
@@ -29,8 +16,8 @@
                     <div class="card-body flex align-items-center justify-content-center ">
                         <h4 class="card-title text-center">{{ song.song_title }}</h4>
                         <h5 class="card-subtitle text-center">{{ song.artist_name }}</h5>
-
-                        <audio controls controlsList="nodownload" class="m-3 col-md-10 col-11 align-items-center justify-content-center">
+                        <audio controls controlsList="nodownload"
+                            class="m-3 col-md-10 col-11 align-items-center justify-content-center">
                             <source src="{{ song.song_file.url }}" type="audio/mpeg">
                             Your browser does not support the audio element.
                         </audio>
@@ -40,12 +27,5 @@
             {% endfor %}
         </div>
     </div>
-
-
-
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous">
-    </script>
-
-
-</html>
+</main>
+{% endblock %}
