--- a/templates/base.html
+++ b/templates/base.html
@@ -14,9 +14,9 @@
     <link rel="icon" type="image/x-icon" href="{% static 'favicon/favicon.ico' %}">
 </head>
 
-<body>
-    <header>
-        <nav class="navbar navbar-expand-lg bg-body-tertiary">
+<body class="all-main">
+    <header class="head-head">
+        <nav class="navbar navbar-expand-lg ">
             <div class="container-fluid">
                 <a class="navbar-brand" href="{% url 'home' %}"><strong>Blue Pulse</strong> </a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
