--- a/templates/home/index.html
+++ b/templates/home/index.html
@@ -3,7 +3,7 @@
 {% block content %}
 
 {% load static %}
-<main>
+<main class="home-main">
     <div class="container">
         <h1 class="text-center">Hello, world!</h1>
     </div>
