--- a/templates/musicapp/ramble.html
+++ b/templates/musicapp/ramble.html
@@ -5,25 +5,25 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Blue Pulse Demo</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <!-- Css file location -->
     <link rel="stylesheet" type="text/css" href="{% static 'styles/css/style.css' %}">
     <!-- Favicon -->
     <link rel="icon" type="image/x-icon" href="{% static 'favicon/favicon.ico' %}">
+    <title>Blue Pulse Demo</title>
 </head>
 <main class="song-main">
     <h1 class="text-center song-head">Blue Pulse Anthology</h1>
     <div class="container">
         <div class="row">
-
             <div class="col-md-4 mb-4 ">
                 <div class="card song-card intellectual-grey pt-2">
                     <img src="{{ songs.1.song_image.url }}" class="mx-auto" alt="{{ songs.1.song_title }} Image" width="200" height="250">
                     <div class="card-body flex align-items-center justify-content-center ">
                         <h4 class="card-title text-center">{{ songs.1.song_title }}</h4>
                         <h5 class="card-subtitle text-center">{{ songs.1.artist_name }}</h5>
+                        <!-- Remove download from slider -->
                         <audio controls controlsList="nodownload" class="m-3 col-md-10 col-11 align-items-center justify-content-center">
                             <source src="{{ songs.1.song_file.url }}" type="audio/mpeg">
                             Your browser does not support the audio element.
