--- a/templates/musicapp/song_list.html
+++ b/templates/musicapp/song_list.html
@@ -16,11 +16,15 @@
                     <div class="card-body flex align-items-center justify-content-center ">
                         <h4 class="card-title text-center">{{ song.song_title }}</h4>
                         <h5 class="card-subtitle text-center">{{ song.artist_name }}</h5>
-                        <audio controls controlsList="nodownload"
+                        <!-- Remove download from slider -->
+                        <audio controls controlsList="nodownload" id="songplay"
                             class="m-3 col-md-10 col-11 align-items-center justify-content-center">
                             <source src="{{ song.song_file.url }}" type="audio/mpeg">
                             Your browser does not support the audio element.
                         </audio>
+                        <div class=" col-md-10 flex align-items-center justify-content-center" >
+                        <!-- <img src="{% static 'pdproduct.png' %}" alt="Description of the image"> -->
+                        </div>
                     </div>
                 </div>
             </div>
@@ -28,4 +32,13 @@
         </div>
     </div>
 </main>
+<script>
+const obj = document.getElementById("songplay");
+
+obj.addEventListener("loadeddata", () => {
+  if (obj.readyState >= 2) {
+    obj.play();
+  }
+});
+</script>
 {% endblock %}
