--- a/templates/home/index.html
+++ b/templates/home/index.html
@@ -3,9 +3,9 @@
 {% block content %}
 
 {% load static %}
-<main class="home-main">
+<main >
     <div class="container">
-        <h1 class="text-center">Hello, world!</h1>
+        <h1 class="text-center">Darren is a <strong>Tosser</strong> </h1>
     </div>
 </main>
 {% endblock %}
