--- a/templates/home/index.html
+++ b/templates/home/index.html
@@ -5,7 +5,7 @@
 {% load static %}
 <main >
     <div class="container">
-        <h1 class="text-center">Darren is a <strong>Tosser</strong> </h1>
+        <h1 class="text-center">Darren is a <strong>Blue Genius</strong> </h1>
     </div>
 </main>
 {% endblock %}
