--- a/templates/home/index.html
+++ b/templates/home/index.html
@@ -3,9 +3,42 @@
 {% block content %}
 
 {% load static %}
-<main >
-    <div class="container">
-        <h1 class="text-center">Darren is a <strong>Blue Genius</strong> </h1>
+<!-- blue-pulse-hero-image d-flex align-items-center justify-content-center min-height-main-footer border-5 -->
+<main class="container d-flex justify-content-start align-items-center min-height-main-footer col-md-10">
+    
+    <div>
+        <!-- <div class="row blue justify-content-start"> -->
+        <div class="col-sm-6 text-white">
+            <br>
+               <h2 class="lifeline-font">Blue Pulse</h2>
+            <p>Blue Pulse is a collaboration of a talented duo with a mastery of
+                their
+                respective instruments (well at least Paul does), <strong>
+                    <large>Paul "fingers" Gleeson</large>
+                    
+                </strong> and
+                Daren "Interesting" Hines, that
+                specializes in rock and blues-based music.</p>
+            <p>The band was formed in 1998 and has since been dedicated to
+                creating music that is both authentic and true to their influences while also showcasing their
+                unique
+                sound.
+                The band draws inspiration from blues legends such as Led Zeppelin, Rory Gallagher, Muddy Waters, BB
+                King,
+                Gary Moore, and Ken Dod.</p>
+            <p>The band's rock/blues-based music is produced, mixed, and recorded at Shagamatula Studios
+                International
+                in both London, England, and the Republic of Ireland, using Cubase: Music Production Software - DAW.
+                Blue
+                Pulse is always looking for new ways to incorporate techniques into their music to create something
+                fresh and
+                exciting in a bluesy fashion.</p>
+            <p>As a collaboration of two great musical talents, Blue Pulse is able to create a sound that is both
+                powerful
+                and unique while staying true to the blues and rock genres. The band's dedication to their craft and
+                their
+                love for rock/blues-based music is evident in every note they play.</p>
+        </div>
     </div>
 </main>
 {% endblock %}
