home page transfere

--- a/templates/home/index.html
+++ b/templates/home/index.html
@@ -3,21 +3,17 @@
 {% block content %}
 
 {% load static %}
-<!-- blue-pulse-hero-image d-flex align-items-center justify-content-center min-height-main-footer border-5 -->
+
 <main class="container d-flex justify-content-start align-items-center min-height-main-footer col-md-10">
-    
+
     <div>
-        <!-- <div class="row blue justify-content-start"> -->
         <div class="col-sm-6 text-white">
             <br>
-               <h2 class="lifeline-font">Blue Pulse</h2>
+            <h2 class="lifeline-font">Blue Pulse</h2>
             <p>Blue Pulse is a collaboration of a talented duo with a mastery of
                 their
-                respective instruments (well at least Paul does), <strong>
-                    <large>Paul "fingers" Gleeson</large>
-                    
-                </strong> and
-                Daren "Interesting" Hines, that
+                respective instruments,
+                Paul <i>"fingers"</i> Gleeson & Daren <i>"vocal vandal"</i> Hines, that
                 specializes in rock and blues-based music.</p>
             <p>The band was formed in 1998 and has since been dedicated to
                 creating music that is both authentic and true to their influences while also showcasing their
