added nav links

--- a/static/styles/css/style.css
+++ b/static/styles/css/style.css
@@ -19,7 +19,10 @@
     background-color: deepskyblue;
 
 }
-
+.nav-bar-text {
+    color: white;
+    font-size: large;
+}
 
 /* Landing Page */
 .blue-pulse-hero-imag {
