--- a/templates/base.html
+++ b/templates/base.html
@@ -23,7 +23,7 @@
     <header class="head-head">
         <nav class="navbar navbar-expand-lg ">
             <div class="container-fluid">
-                <a class="navbar-brand" href="{% url 'home' %}"><strong>Blue Pulse</strong> </a>
+                <a class="navbar-brand text-white" href="{% url 'home' %}"><strong>Blue Pulse</strong> </a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
                     aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
@@ -31,23 +31,35 @@
                 <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
                     <ul class="navbar-nav">
                         <li class="nav-item">
-                            <a class="nav-link" aria-current="page" href="{% url 'home' %}">Home</a>
+                            <a class="nav-link nav-bar-text" aria-current="page" href="{% url 'home' %}">Home</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" aria-current="page" href="{% url 'song_list' %}">Anthology</a>
+                            <a class="nav-link nav-bar-text" aria-current="page" href="{% url 'song_list' %}">Anthology</a>
                         </li>
+                        <li class="nav-item nav-bar-text">
+                            <a class="nav-link nav-bar-text" href="#">Bio</a>
+                        </li>
+                        <li class="nav-item nav-bar-text">
+                            <a class="nav-link nav-bar-text" href="#">Gallery</a>
+                        </li>
+                        
+                        {% if request.user.is_authenticated %}
+                        <li class="nav-item nav-bar-text">
+                            <a class="nav-link nav-bar-text" href="#">Chat Room</a>
+                        </li>
+                        {% if request.user.is_superuser %}
                         <li class="nav-item">
-                            <a class="nav-link" href="#">Store</a>
+                            <a class="nav-link nav-bar-text" href="{% url 'admin:index' %}" aria-label="Admin Panel">Admin Panel</a>
                         </li>
+                        {% endif %}
                         <li class="nav-item">
-                            <a class="nav-link" href="#">Gallery</a>
+                            <a class="nav-link nav-bar-text" href="{% url 'account_logout' %}" aria-label="Logout">Logout</a>
                         </li>
+                        {% else %}
                         <li class="nav-item">
-                            <a class="nav-link" href="#">Chat Room</a>
+                            <a class="nav-link nav-bar-text" href="{% url 'account_login' %}" aria-label="Login">Login</a>
                         </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="{% url 'admin:index' %}" aria-label="Admin Panel">Admin Panel</a>
-                        </li>
+                        {% endif %}
                     </ul>
                 </div>
             </div>
