--- a/templates/base.html
+++ b/templates/base.html
@@ -3,6 +3,17 @@
 <html lang="en">
 
 <head>
+    {% block corejs %}
+    <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
+        integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous">
+    </script>
+    <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.min.js"
+        integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"
+        integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous">
+    </script>
+    {% endblock %}
+
     <!-- Meta -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -16,6 +27,20 @@
     <!-- Favicon -->
     <link rel="icon" type="image/x-icon" href="{% static 'favicon/favicon.ico' %}">
     <!-- Title -->
+
+    {% block mainjavascript %}
+    <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
+        integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous">
+    </script>
+    <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.min.js"
+        integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"
+        integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous">
+    </script>
+    {% endblock %}
+
+
+
     <title>Blue Pulse Demo</title>
 </head>
 
@@ -34,7 +59,8 @@
                             <a class="nav-link nav-bar-text" aria-current="page" href="{% url 'home' %}">Home</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link nav-bar-text" aria-current="page" href="{% url 'song_list' %}">Anthology</a>
+                            <a class="nav-link nav-bar-text" aria-current="page"
+                                href="{% url 'song_list' %}">Anthology</a>
                         </li>
                         <li class="nav-item nav-bar-text">
                             <a class="nav-link nav-bar-text" href="#">Bio</a>
@@ -42,22 +68,25 @@
                         <li class="nav-item nav-bar-text">
                             <a class="nav-link nav-bar-text" href="#">Gallery</a>
                         </li>
-                        
+
                         {% if request.user.is_authenticated %}
                         <li class="nav-item nav-bar-text">
                             <a class="nav-link nav-bar-text" href="#">Chat Room</a>
                         </li>
                         {% if request.user.is_superuser %}
                         <li class="nav-item">
-                            <a class="nav-link nav-bar-text" href="{% url 'admin:index' %}" aria-label="Admin Panel">Admin Panel</a>
+                            <a class="nav-link nav-bar-text" href="{% url 'admin:index' %}"
+                                aria-label="Admin Panel">Admin Panel</a>
                         </li>
                         {% endif %}
                         <li class="nav-item">
-                            <a class="nav-link nav-bar-text" href="{% url 'account_logout' %}" aria-label="Logout">Logout</a>
+                            <a class="nav-link nav-bar-text" href="{% url 'account_logout' %}"
+                                aria-label="Logout">Logout</a>
                         </li>
                         {% else %}
                         <li class="nav-item">
-                            <a class="nav-link nav-bar-text" href="{% url 'account_login' %}" aria-label="Login">Login</a>
+                            <a class="nav-link nav-bar-text" href="{% url 'account_login' %}"
+                                aria-label="Login">Login</a>
                         </li>
                         {% endif %}
                     </ul>
