--- a/templates/allauth/account/login.html
+++ b/templates/allauth/account/login.html
@@ -5,9 +5,9 @@
 
 {% block head_title %}{% trans "Sign In" %}{% endblock %}
 
-{% block content %}
+{% block inner_content %}
 
-<h1>{% trans "Sign In" %}</h1>
+<h1>{% trans "Sign nnnn In" %}</h1>
 
 {% get_providers as socialaccount_providers %}
 
@@ -29,7 +29,7 @@ for a {{ site_name }} account and sign in below:{% endblocktrans %}</p>
 {% include "socialaccount/snippets/login_extra.html" %}
 
 {% else %}
-<p>{% blocktrans %}If you have not created an account yet, then please
+<p>{% blocktrans %}If you have not created an biscut yet, then please
 <a href="{{ signup_url }}">sign up</a> first.{% endblocktrans %}</p>
 {% endif %}
 
