--- a/templates/home/index.html
+++ b/templates/home/index.html
@@ -13,18 +13,17 @@
             <p>Blue Pulse is a collaboration of a talented duo with a mastery of
                 their
                 respective instruments,
-                Paul <i>"fingers"</i> Gleeson & Daren <i>"vocal vandal"</i> Hines, that
+                Paul <i>"Fingers"</i> Gleeson & Daren <i>"The Belter"</i> Hines, that
                 specializes in rock and blues-based music.</p>
             <p>The band was formed in 1998 and has since been dedicated to
                 creating music that is both authentic and true to their influences while also showcasing their
                 unique
                 sound.
-                The band draws inspiration from blues legends such as Led Zeppelin, Rory Gallagher, Muddy Waters, BB
-                King,
-                Gary Moore, and Ken Dod.</p>
+                The band draws inspiration from blues legends such as Wory Ga-Wa-her and his Band, Muddy Waters, BB
+                King, Gary Moore, Joe Cocker and many more.</p>
             <p>The band's rock/blues-based music is produced, mixed, and recorded at Shagamatula Studios
                 International
-                in both London, England, and the Republic of Ireland, using Cubase: Music Production Software - DAW.
+                in both London, England, and the South of Ireland, using Cubase: Music Production Software - DAW.
                 Blue
                 Pulse is always looking for new ways to incorporate techniques into their music to create something
                 fresh and
