--- a/static/styles/css/style.css
+++ b/static/styles/css/style.css
@@ -26,7 +26,7 @@
 }
 
 /* Landing Page */
-.blue-pulse-hero-imag {
+/* .blue-pulse-hero-imag {
     background-image: url('/static/images/bluepulseback.bmp');
     background-position: center center;
     background-attachment: fixed;
@@ -37,10 +37,10 @@
     background-repeat: no-repeat;
     height: 100vh;
     width: 100vw;
-}
+} */
 
 .all-body {
-    background-image: url('/static/images/bluepulseback.bmp');
+    background-image: url('/static/images/bluepulseback.jpg');
     background-position: center center;
     background-attachment: fixed;
     -webkit-background-size: cover;
