--- a/static/styles/css/style.css
+++ b/static/styles/css/style.css
@@ -25,6 +25,28 @@
     font-size: large;
 }
 
+.test-class2 {
+    font-size: 16px;
+    height: 22px;
+    line-height: 22px;
+    display: inline-block;
+    padding-right: 0;
+}
+
+.test-class {
+
+    color: #333;
+    font-size: 12px;
+    line-height: 16px;
+    display: -moz-box;
+    display: -webkit-box;
+    -webkit-box-orient: vertical;
+    text-overflow: ellipsis;
+    -webkit-line-clamp: 2;
+    height: 32px;
+    overflow: hidden;
+}
+
 /* Landing Page */
 /* .blue-pulse-hero-imag {
     background-image: url('/static/images/bluepulseback.bmp');
@@ -122,7 +144,7 @@ audio {
     font-weight: 100;
     font-size: xx-large;
     font-size: 100px;
-    
+
 }
 
 /* Allauth  */
@@ -133,11 +155,23 @@ audio {
 .login input[type="email"],
 .login input[type="password"] {
     color: white;
-       
+
 }
 
 .item-discpt {
     color: white;
     font-size: small;
     font-family: Georgia, 'Times New Roman', Times, serif;
+}
+
+
+
+
+.card-title,
+.card-text {
+color:antiquewhite;
+}
+
+.merch-card-text{
+    color:antiquewhite;
 }
