got images working

--- a/static/styles/css/style.css
+++ b/static/styles/css/style.css
@@ -166,12 +166,15 @@ audio {
 
 
 
+.navbar {
+    background-color: #001f2b;
+}
 
 .card-title,
 .card-text {
-color:antiquewhite;
+    color: antiquewhite;
 }
 
-.merch-card-text{
-    color:antiquewhite;
+.merch-card-text {
+    color: antiquewhite;
 }
