--- a/templates/base.html
+++ b/templates/base.html
@@ -66,7 +66,7 @@
                                 href="{% url 'song_list' %}">Anthology</a>
                         </li>
                         <li class="nav-item nav-bar-text">
-                            <a class="nav-link nav-bar-text" href="{% url 'all_goods' %}">Merchandise</a>
+                            <a class="nav-link nav-bar-text" href="{% url 'all_merchandise' %}">Merchandise</a>
                         </li>
                         <li class="nav-item nav-bar-text">
                             <a class="nav-link nav-bar-text" href="#">Gallery</a>
