--- a/templates/merchendise/detail_merch.html
+++ b/templates/merchendise/detail_merch.html
@@ -1,22 +1,33 @@
 {% extends 'base.html' %}
-
-
 {% block content %}
-  <div class="container">
-    <div class="row">
-      <div class="col-md-6">
-        <img src="{{ merchantobj.image.url }}" alt="{{ merchantobj.name }}" class="img-fluid">
+
+<main class="detail-main-back">
+
+  <h1 class="text-center lifeline-font" style="margin-top: 70px"> Blue Pulse Merchandise</h1>
+
+  <div class="container d-flex align-items-center justify-content-center">
+
+    <div class="col-md-6  blue p-5">
+      <h5 class="card-title">{{ merchantobj.name }}</h5>
+      <div class="container discription-text mt-5">
+        {{ merchantobj.description }}
       </div>
-      <div class="col-md-6">
-        <h1>{{ merchantobj.name }}</h1>
-        <p>{{ merchantobj.description }}</p>
+      <div class="mt-5">
         <p>Price: ${{ merchantobj.price }}</p>
+      </div>
+      <div class="mt-5">
         {% if merchantobj.rating %}
-          <p>Rating: {{ merchantobj.rating }}/5</p>
+        <small class="text-rich-black rating"><i class="fas fa-star mr-1 star" style="color: gold"></i>
+          {{merchantobj.rating }} / 5 </small>
         {% else %}
-          <p>No rating yet</p>
+        <p>No rating yet</p>
         {% endif %}
       </div>
     </div>
+    <div class="col-md-6 green">
+      <img src="{{ merchantobj.image.url }}" alt="{{ merchantobj.name }}" class="img-fluid" />
+    </div>
+  {% endblock %}
+
   </div>
-{% endblock %}
+</main>
