--- a/templates/merchendise/all_merch.html
+++ b/templates/merchendise/all_merch.html
@@ -8,7 +8,7 @@
     </div>
 {% endblock %}
 {% block content %}
-<main class="container-fluid red">
+<main class="container-fluid ">
   <div class="container d-flex align-items-center justify-content-center">
     <div class="row">
       {% for merch in all_merch %}
