--- a/static/styles/css/style.css
+++ b/static/styles/css/style.css
@@ -131,7 +131,8 @@ audio {
     font-family: 'ECG Font', sans-serif;
     font-weight: 100;
     font-size: xx-large;
-    font-size: 100px;
+    color: white;
+    
 
 }
 
