--- a/static/styles/css/style.css
+++ b/static/styles/css/style.css
@@ -188,3 +188,9 @@ audio {
     background-color: gold;
 }
 
+/* TO BE DELETED */
+
+.merch-item-height {
+    height:75vh;
+    background-color:  #00415a;
+    }
