--- a/templates/merchendise/all_merch.html
+++ b/templates/merchendise/all_merch.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
 
 {% block content %}
-<main class="container-fluid green">
+<main class="container-fluid">
     <h1 class="text-center lifeline-font" style="margin-top: 70px;"> <i>Merchandise</i></h1>
        
     <div class="row justify-content-center align-items-center">
