--- a/templates/merchendise/merch_item.html
+++ b/templates/merchendise/merch_item.html
@@ -1,16 +1,15 @@
 {% extends 'base.html' %}
 {% block content %}
+<main class="container-fluid d-flex align-items-center justify-content-center merch-main-height" >
 
-<main class="container-fluid align-items-center justify-content-center">
-  <h1 class="text-center lifeline-font" style="margin-top: 70px;"> <i>Merchandise</i></h1>
   <div class="container merch-item-height d-flex align-items-center justify-content-center rounded-4">
-    <div class="row ">
-      <!-- (Left Side Image) -->
+    <div class="row">
+      <!-- On Large Screens, Display Side by Side -->
       <div class="col-md-6 d-flex align-items-center justify-content-center">
         <img src="{{ merch_item.image.url }}" alt="{{ merch_item.name }}" class="img-fluid p-3 rounded-5" />
       </div>
-      <!-- (Right Side Text) -->
       <div class="col-md-6 align-content-around">
+        <!-- Right Side Text -->
         <br>
         <h5 class="card-title">{{ merch_item.name }}</h5>
         <br>
