--- a/merchandise/templates/merchandise/merch_item.html
+++ b/merchandise/templates/merchandise/merch_item.html
@@ -1,33 +1,30 @@
 {% extends 'base.html' %}
 {% block content %}
+<main class="container-fluid d-flex align-items-center justify-content-center merch-main-height">
 
-<main class="container-fluid h-100 d-flex align-items-center justify-content-center ">
-  <div class="h-25">
+    <div class="container merch-item-height d-flex align-items-center justify-content-center rounded-4">
+        <div class="row">
+            <!-- On Large Screens, Display Side by Side -->
+            <div class="col-md-6 d-flex align-items-center justify-content-center">
+                <img src="{{ merch_item.image.url }}" alt="{{ merch_item.name }}" class="img-fluid p-3 rounded-5" />
+            </div>
+            <div class="col-md-6 align-content-around">
+                <!-- Right Side Text -->
+                <br>
+                <h5 class="card-title">{{ merch_item.name }}</h5>
+                <br>
+                <p class="card-text">{{ merch_item.description }}</p>
+                <br>
+                <p class="card-text">Price: ${{ merch_item.price }}</p>
+                {% if merch_item.rating %}
+                <small class="discription-page-text rating"><i class="fas fa-star mr-1 star"
+                        style="color: gold"></i>{{merch_item.rating }} / 5 </small>
+                {% else %}
+                <p class="discription-page-text">No rating yet</p>
+                {% endif %}
+            </div>
 
-  </div>
-  <div class="mt-5 d-flex align-items-center justify-content-center flex-md-row flex-column-reverse ">
-    <div class="col-lg-6 col-md-8 col-sm-10 col-12 p-2">
-
-
-      <div class="container discription-page-text col-lg-8 col-md-9 col-sm-12 col-12 border-2 ">
-        <h5 class="card-title ">{{ merch_item.name }}</h5>
-        <br>
-        <p class="align-items-start">{{ merch_item.description }} </p>
-        <p>Price: ${{ merch_item.price }}</p>
-        {% if merch_item.rating %}
-        <small class="discription-page-text rating"><i class="fas fa-star mr-1 star"
-            style="color: gold"></i>{{merch_item.rating }} / 5 </small>
-        {% else %}
-        <p class="discription-page-text">No rating yet</p>
-        {% endif %}
-      </div>
-
+        </div>
     </div>
-    <div class="col-md-6 col-sm-10 col-12 d-flex flex-column justify-content-center align-items-center ">
-      <div class="text-center mx-auto">
-        <img src="{{ merch_item.image.url }}" alt="{{ merch_item.name }}" class="img-fluid p-3" />
-      </div>
-    </div>
-  </div>
 </main>
 {% endblock %}
