fix spacing on home page

--- a/merchandise/templates/merchandise/all_merch.html
+++ b/merchandise/templates/merchandise/all_merch.html
@@ -2,7 +2,7 @@
 
 {% block content %}
 <main class="container-fluid">
-    <h1 class="text-center lifeline-font" style="margin-top: 70px;"> <i>Merchandise</i></h1>
+    <h1 class="text-center lifeline-font"> <i>Merchandise</i></h1>
     <!-- Rendering All Merchandise -->
     <div class="row justify-content-center align-items-center">
         <div class="col-xl-9 col-md-11 col-sm-12 col-12">
