--- a/templates/home/index.html
+++ b/templates/home/index.html
@@ -1,12 +1,12 @@
 {% extends "base.html" %} {% block content %} {% load static %}
 
 <main
-  class="container d-flex justify-content-start align-items-center min-height-main-footer col-md-10"
+  class="container d-flex justify-content-start align-items-center  col-md-10"
 >
   <div>
     <div class="col-lg-8 col-md-9 col-sm-12 col-12 p-2 text-white">
       <br />
-      <h1 class="lifeline-font" style="margin-top: 70px">
+      <h1 class="lifeline-font" >
         <i>Blue Pulse</i>
       </h1>
       <p>
