--- a/templates/home/index.html
+++ b/templates/home/index.html
@@ -1,42 +1,46 @@
-{% extends "base.html" %} {% block content %} {% load static %}
+{% extends "base.html" %}
+{% block content %}
+    {% load static %}
 
-<main
-  class="container d-flex justify-content-start align-items-center  col-md-10"
->
-  <div>
-    <div class="col-lg-8 col-md-9 col-sm-12 col-12 p-2 text-white">
-      <br />
-      <h1 class="lifeline-font" >
-        <i>Blue Pulse</i>
-      </h1>
-      <p>
-        Blue Pulse is a collaboration of a talented duo with a mastery of their
-        respective instruments, Paul <i>"Fingers"</i> Gleeson & Daren
-        <i>"The Belter"</i> Hines, that specializes in rock and blues-based
-        music.
-      </p>
-      <p>
-        The band was formed in 1998 and has since been dedicated to creating
-        music that is both authentic and true to their influences while also
-        showcasing their unique sound. The band draws inspiration from blues
-        legends such as Wory Ga-Wa-her and his Band, Muddy Waters, BB King, Gary
-        Moore, Joe Cocker and many more.
-      </p>
-      <p>
-        The band's rock/blues-based music is produced, mixed, and recorded at
-        Shagamatula Studios International in both London, England, and the South
-        of Ireland, using Cubase: Music Production Software - DAW. Blue Pulse is
-        always looking for new ways to incorporate techniques into their music
-        to create something fresh and exciting in a bluesy fashion.
-      </p>
-      <p>
-        As a collaboration of two great musical talents, Blue Pulse is able to
-        create a sound that is both powerful and unique while staying true to
-        the blues and rock genres. The band's dedication to their craft and
-        their love for rock/blues-based music is evident in every note they
-        play.
-      </p>
-    </div>
-  </div>
-</main>
-{% endblock %}
+    <main class="container d-flex justify-content-start align-items-center adjust-index-height col-md-10 green min-height-main-footer">
+        <div class="blue h-100">
+            <div class="col-lg-8 col-md-9 col-sm-12 col-12 p-2 text-white red">
+                <br/>
+                <h1 class="lifeline-font">
+                    <i>Blue Pulse</i>
+                </h1>
+                <br>
+                    <p>
+                        Blue Pulse is a collaboration of a talented duo with a mastery of their
+                                                                            respective instruments, Paul
+                        <i>"Fingers"</i>
+                        Gleeson & Daren
+                        <i>"The Belter"</i>
+                        Hines, that specializes in rock and blues-based
+                                                                            music.
+                    </p>
+                    <p>
+                        The ensemble was established in 1998 and has steadfastly committed itself to the 
+                                                                    creation of music that remains faithful to its influences while simultaneously 
+                                                                    highlighting its distinctive sonic signature. The band draws inspiration from 
+                                                                    esteemed blues luminaries, including but not limited to Rory Gallagher, 
+                                                                    Muddy Waters, BB King, Gary Moore, and Joe Cocker.
+                    </p>
+                    <p>
+                        The band's rock/blues-based music is produced, mixed, and recorded at
+                                                                            Shagamatula Studios International in both London, England, and the South
+                                                                            of Ireland, using Cubase: Music Production Software - DAW. Blue Pulse is
+                                                                            always looking for new ways to incorporate techniques into their music
+                                                                            to create something fresh and exciting in a bluesy fashion.
+                    </p>
+                    <p>
+                        As a collaboration of two great musical talents, Blue Pulse is able to
+                                                                            create a sound that is both powerful and unique while staying true to
+                                                                            the blues and rock genres. The band's dedication to their craft and
+                                                                            their love for rock/blues-based music is evident in every note they
+                                                                            play.
+                    </p>
+                </div>
+            </div>
+        </main>
+    {% endblock %}
