--- a/templates/home/index.html
+++ b/templates/home/index.html
@@ -2,9 +2,9 @@
 {% block content %}
     {% load static %}
 
-    <main class="container d-flex justify-content-start align-items-center adjust-index-height col-md-10 green min-height-main-footer">
-        <div class="blue h-100">
-            <div class="col-lg-8 col-md-9 col-sm-12 col-12 p-2 text-white red">
+    <main class="container d-flex justify-content-start align-items-center adjust-index-height col-md-10 min-height-main-footer">
+        <div class="">
+            <div class="col-lg-8 col-md-9 col-sm-12 col-12 p-2 text-white ">
                 <br/>
                 <h1 class="lifeline-font">
                     <i>Blue Pulse</i>
