--- a/static/styles/css/style.css
+++ b/static/styles/css/style.css
@@ -43,14 +43,14 @@
     -o-background-size: cover;
     background-size: cover;
     background-repeat: no-repeat;
-    min-height: calc(100vh - 135px);
+    min-height: calc(100vh - 100px);
     width: 100vw;
 }
 
 /* Footer phantom main page */
 
 .min-height-main-footer {
-    min-height: calc(100vh - 135px);
+    min-height: calc(100vh - 100px);
 }
 
 
@@ -193,8 +193,11 @@ audio {
 
 /* Remove gap at to of screen */
 @media(max-width: 767px) {
+    .min-height-main-footer,
     .adjust-index-height {
         align-items: flex-start;
         min-height: auto;
+        
+        
     }
 }
